Changed translation of three samadhis, abode of emptiness (to space), and fixed a passage in DA 10,11.

--- a/01_agama/dirgha/DA_11.md
+++ b/01_agama/dirgha/DA_11.md
@@ -31,7 +31,7 @@ The monks then accepted the teaching and listened.
 7\. “There are also three things to be achieved, three things to be cultivated, three things to be recognized, three things to be ceased, and three things to be realized.
 {:#p7}
 
-8\. “What are the three things to be achieved? They are 1) making good friends, 2) listening to the voice of Dharma, and 3) accomplishing (consecutive) teachings.
+8\. “What are the three things to be achieved? They are 1. making good friends, 2. listening to the voice of Dharma, and 3. accomplishing [consecutive] teachings.
 {:#p8}
 
 9\. “What are the three things to be cultivated? They are the three concentrations: The concentration of emptiness, the concentration without appearances, and the concentration without action.
@@ -49,10 +49,10 @@ The monks then accepted the teaching and listened.
 13\. “There are also four things to be achieved, four things to be cultivated, four things to be recognized, four things to be ceased, and four things to be realized.
 {:#p13}
 
-14\. “What are the four things to be achieved? They are 1) living in a central country,[\[2\]](#n2){:#ref2} 2) staying close to good friends, 3) guarding oneself, and 4) having planted good roots in the past.
+14\. “What are the four things to be achieved? They are 1. living in a central country,[\[2\]](#n2){:#ref2} 2. staying close to good friends, 3. guarding oneself, and 4. having planted good roots in the past.
 {:#p14}
 
-15\. “What are the four things to be cultivated? They are abiding in the four abodes of mindfulness: 1) A monk observes internal body as body diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. He observes external body as body diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow … He likewise observes 2) feelings, 3) mind, and 4) teachings …
+15\. “What are the four things to be cultivated? They are abiding in the four abodes of mindfulness: [1] A monk observes internal body as body diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. He observes internal and external body as body, diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. *He likewise observes [2] feelings, [3] mind, and [4] teachings …*
 {:#p15}
 
 16\. “What are the four things to be recognized? They are the four foods: Physical food, food of contact, food of thought, and food of consciousness.
@@ -67,7 +67,7 @@ The monks then accepted the teaching and listened.
 19\. “There are also five things to be achieved, five things to be cultivated, five things to be recognized, five things to be ceased, and five things to be realized.
 {:#p19}
 
-20\. “What are the five things to be achieved? They are the five factors of complete cessation: 1) faith in the Buddha, Tathāgata, and Arhat who perfected the ten epithets, 2) lacking illness and being at peace, 3) honesty and lack of deception about heading directly down the Tathāgata’s road to nirvāṇa, 4) mental focus that’s not confused and doesn’t forget the recitations, and 5) skill in investigating the arising and cessation of things and ending the root of suffering with the noble practice.
+20\. “What are the five things to be achieved? They are the five factors of complete cessation: 1. faith in the Buddha, Tathāgata, and Arhat who perfected the ten epithets, 2. lacking illness and being at peace, 3. honesty and lack of deception about heading directly down the Tathāgata’s road to nirvāṇa, 4. mental focus that’s not confused and doesn’t forget the recitations, and 5. skill in investigating the arising and cessation of things and ending the root of suffering with the noble practice.
 {:#p20}
 
 21\. “What are the five things to be cultivated? They are the five faculties: faculty of faith, faculty of effort, faculty of mindfulness, faculty of concentration, and faculty of wisdom.
@@ -88,128 +88,141 @@ The monks then accepted the teaching and listened.
 26\. “What are the six things to be achieved? They are the six honored things. If a monk cultivates six honored things that are respectable and honorable, it will unify him with the community without quarrels, and he’ll practice alone without mixing [with others].
 {:#p26}
 
-27\. “What are the six? 1) Here, a monk always physically acts with kindness and cultivates the religious life, abiding with a benevolent intent. This is called an honorable thing that’s respectable and honorable and unifies him with the community without quarrels. He’ll practice alone without mixing [with others].
+27.
+28.
+29.  ...
+30.
+
+
+
+27\. “What are the six? [1] A monk’s physical conduct is always kind, respecting religious practitioners and abiding with benevolence. This is called an honored thing that’s respectable and honorable. It unifies him with the community without any quarrels, and he practices alone without mixing with others.
 {:#p27}
 
-28\. “Furthermore, a monk is 2) verbally and 3) mentally kind, and 4) he shares left over alms from his own bowl with others and doesn’t keep it from them. 5) Furthermore, a monk doesn’t violate or criticize the precepts practiced by noble people. He isn’t defiled, and he’s commended by wise people for skillfully perfecting the observance of precepts. 6) He accomplishes the noble escape, the complete end to suffering, right view, and the practices of the religious life. These are called honorable things that are respectable and honorable and unify him with the community without quarrels. He’ll practice alone without mixing [with others].
+28\. “Furthermore, a monk is [2] verbally kind … [3] mentally kind … [4] shares his own leftover alms with other people from his bowl. He doesn’t favor certain people when doing so …
 {:#p28}
 
-29\. “What are the six things to be cultivated? They are the six recollections: recollection of the Buddha, recollection of the Dharma, recollection of the Saṅgha, recollection of the precepts, recollection of generosity, and recollection of gods.
+29\. “Furthermore, [5] a monk doesn’t violate, criticize, or defile the precepts that are practiced by noble people. He’s commended by wise people for skillfully perfecting the observance of precepts, and he achieves a settled mind …
 {:#p29}
 
-30\. “What are the six things to be recognized? They are the six internal senses: the eye sense, ear sense, nose sense, tongue sense, body sense, and mental sense.
+30\. “[Furthermore, a monk] [6] accomplishes the noble escape, completely ends suffering, and attains various religious practices with right view. This is called an honored thing that’s respectable and honorable. It unifies him with the community without any quarrels, and he practices alone without mixing with others.
 {:#p30}
 
-31\. “What are the six things to be ceased? They are the six cravings: craving for sights, craving for sound, craving for odor, craving for flavor, craving for touches, and craving for notions.
+31\. “What are the six things to be cultivated? They are the six recollections: recollection of the Buddha, recollection of the Dharma, recollection of the Saṅgha, recollection of the precepts, recollection of generosity, and recollection of gods.
 {:#p31}
 
-32\. “What are the six things to be realized? They are the six spiritual penetrations: 1) the realization of miraculous abilities, 2) realization of the heavenly ear, 3) realization of knowing others’ minds, 4) realization of perceiving past lives, 5) realization of the heavenly eye, and 6) realization of perceiving the end of the contaminants.
+32\. “What are the six things to be recognized? They are the six internal senses: the eye sense, ear sense, nose sense, tongue sense, body sense, and mental sense.
 {:#p32}
 
-33\. “There are also seven things to be achieved, seven things to be cultivated, seven things to be recognized, seven things to be ceased, and seven things to be realized.
+33\. “What are the six things to be ceased? They are the six cravings: craving for sights, craving for sounds, craving for odors, craving for flavors, craving for touches, and craving for notions.
 {:#p33}
 
-34\. “What are the seven things to be achieved? They are the seven kinds of wealth: wealth in faith, wealth in precepts, wealth in conscience, wealth in modesty, wealth in learning, wealth in generosity, and wealth in wisdom. These are the seven kinds of wealth.
+34\. “What are the six things to be realized? They are the six spiritual penetrations: 1. the realization of miraculous abilities, 2. realization of the heavenly ear, 3. realization of knowing others’ minds, 4. realization of perceiving past lives, 5. realization of the heavenly eye, and 6. realization of perceiving the end of the contaminants.
 {:#p34}
 
-35\. “What are the seven things to be cultivated? They are the seven awakenings. Here, a monk 1) cultivates the awakening of mindfulness, which depends on being desireless, tranquil, and secluded. He … 2) cultivates the teaching … 3) cultivates effort … 4) cultivates joy … 5) cultivates mildness … 6) cultivates concentration … 7) cultivates equanimity, which depends on being desireless, tranquil, and secluded.
+35\. “There are also seven things to be achieved, seven things to be cultivated, seven things to be recognized, seven things to be ceased, and seven things to be realized.
 {:#p35}
 
-36\. “What are the seven things to be recognized? They are the seven dwelling places of consciousness. If there are sentient beings of diverse bodies and diverse perceptions, these gods and humans are the first abode of consciousness. Again, there are sentient beings of diverse bodies but the same perception. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of consciousness. Again, there are sentient beings of the same body but diverse perceptions. These Ābhāsvara gods are the third abode of consciousness. Again, there are sentient beings of the same body and the same perception. These Śubhakṛtsnā gods are the fourth abode of consciousness. Again, there are sentient beings that dwell in the abode of empty space. This is the fifth abode of consciousness. Some dwell in the abode of consciousness. This is the sixth abode of consciousness. Some are in the abode of nothingness. This is the seventh abode of consciousness.
+36\. “What are the seven things to be achieved? They are the seven kinds of wealth: wealth in faith, wealth in precepts, wealth in conscience, wealth in modesty, wealth in learning, wealth in generosity, and wealth in wisdom. These are the seven kinds of wealth.
 {:#p36}
 
-37\. “What are the seven things to be ceased? They are the seven tendencies: the tendency of craving for desires, tendency of craving for existence, tendency of views, tendency of conceit, tendency of anger, tendency of ignorance, and tendency of doubt.
+37\. “What are the seven things to be cultivated? They are the seven awakenings. Here, a monk cultivates the awakening of mindfulness, which depends on being desireless, tranquil, and secluded. He … cultivates the teaching … cultivates effort … cultivates joy … cultivates mildness … cultivates samādhi … cultivates equanimity, which depends on being desireless, tranquil, and secluded.
 {:#p37}
 
-38\. “What are the seven things to be realized? They are the seven powers of ending the contaminants. Here, a monk who has ended the contaminants 1) really knows and sees all kinds of suffering and their formation, cessation, enjoyment, defect, and escape. 2) He observes desire to be like a fire pit or a sword. He knows desire and sees desire. He isn’t greedy for desires, and his mind doesn’t dwell on desire. 3) Again, skillfully examining it, having really known and really seen it, worldly lust and bad and unskillful things don’t arise and defile him. 4) He cultivates the four abodes of mindfulness, often cultivating and practicing it … 5) the five faculties … five powers … 6) seven awakenings … 7) noble eightfold path, often cultivating and practicing it.
+38\. “What are the seven things to be recognized? They are the seven dwelling places of consciousness. If there are sentient beings of diverse bodies and diverse perceptions, these gods and humans are the first abode of consciousness. Again, there are sentient beings of diverse bodies but the same perception. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of consciousness. Again, there are sentient beings of the same body but diverse perceptions. These Ābhāsvara gods are the third abode of consciousness. Again, there are sentient beings of the same body and the same perception. These Śubhakṛtsnā gods are the fourth abode of consciousness. Again, there are sentient beings that dwell in the abode of space. This is the fifth abode of consciousness. Some dwell in the abode of consciousness. This is the sixth abode of consciousness. Some are in the abode of nothingness. This is the seventh abode of consciousness.
 {:#p38}
 
-39\. “There are also eight things to be achieved, eight things to be cultivated, eight things to be recognized, eight things to be ceased, and eight things to be realized.
+39\. “What are the seven things to be ceased? They are the seven tendencies: the tendency of craving for desires, tendency of craving for existence, tendency of views, tendency of pride, tendency of anger, tendency of ignorance, and tendency of doubt.
 {:#p39}
 
-40\. “What are the eight things to be achieved? They are the eight causes and conditions that gain knowledge before the religious life is attained and increase knowledge once it is attained.
+40\. “What are the seven things to be realized? They are the seven powers of ending the contaminants. Here, a monk who has ended the contaminants [1] really knows and sees all kinds of suffering and their formation, cessation, enjoyment, defect, and escape. [2] He observes desire to be like a fire pit or a sword. He knows desire and sees desire. He isn’t greedy for desires, and his mind doesn’t dwell on desire. [3] Again, skillfully examining it, having really known and really seen it, worldly lust and bad and unskillful things don’t arise and defile him. [4] He cultivates the four abodes of mindfulness, often cultivating and practicing it … [5] the five faculties … five powers … [6] seven awakenings … [7] noble eightfold path, often cultivating and practicing it.
 {:#p40}
 
-41\. “What are the eight? Here, a monk lives according to the Bhagavān, or he might live according to a teacher, elder, or a wise religious practitioner. He becomes conscientious and modest and possesses affection and respect. This is the first cause and condition that gains knowledge before the religious life is attained and increases knowledge once it is attained.
+41\. “There are also eight things to be achieved, eight things to be cultivated, eight things to be recognized, eight things to be ceased, and eight things to be realized.
 {:#p41}
 
-42\. “Furthermore, living according to the Bhagavān, he asks questions at the appropriate time: ‘What does this teaching mean? What’s the aim of it?’ The Honored One immediately discloses its profound meaning. This is the second cause and condition …
+42\. “What are the eight things to be achieved? They are the eight causes and conditions that gain knowledge before the religious life is attained and increase knowledge once it is attained.
 {:#p42}
 
-43\. “Once he has heard this, his body and mind are pleasant and calm. This is the third cause and condition …
+43\. “What are the eight? Here, a monk lives according to the Bhagavān, or he might live according to a teacher, elder, or a wise religious practitioner. He becomes conscientious and modest and possesses affection and respect. This is the first cause and condition that gains knowledge before the religious life is attained and increases knowledge once it is attained.
 {:#p43}
 
-44\. “He doesn’t engage in unbeneficial discussions that obstruct the path. When he goes into a community, he either discusses the teaching himself or asks another to discuss it, but he doesn’t abandon the noble silence. This is the fourth cause and condition …
+44\. “Furthermore, living according to the Bhagavān, he asks questions at the appropriate time: ‘What does this teaching mean? What’s the aim of it?’ The Honored One immediately discloses its profound meaning. This is the second cause and condition …
 {:#p44}
 
-45\. “His learning becomes extensive, and he retains and doesn’t lose the profundities of the teaching that’s good in the beginning, middle, and end, that’s genuine in content and expression, and perfects the religious life. Having heard it, it enters his mind and doesn’t drift away. This is the fifth cause and condition …
+45\. “Once he has heard this, his body and mind are pleasant and calm. This is the third cause and condition …
 {:#p45}
 
-46\. “He trains diligently, desisting from unskillful conduct and increasing daily his skillful conduct. He exerts himself to be worthy and doesn’t abandon this teaching. This is the sixth cause and condition …
+46\. “He doesn’t engage in unbeneficial discussions that obstruct the path. When he goes into a community, he either discusses the teaching himself or asks another to discuss it, but he doesn’t abandon the noble silence. This is the fourth cause and condition …
 {:#p46}
 
-47\. “Also, he recognizes the law of arising and cessation with wisdom and heads for the noble’s end of suffering. This is the seventh cause and condition …
+47\. “His learning becomes extensive, and he retains and doesn’t lose the profundities of the teaching that’s good in the beginning, middle, and end, that’s genuine in content and expression, and perfects the religious life. Having heard it, it enters his mind and doesn’t drift away. This is the fifth cause and condition …
 {:#p47}
 
-48\. “Also, he observes the arising and ceasing nature of the five acquired aggregates: ‘This is form, form’s coming together, and form’s cessation. This is feeling … perception … volition … consciousness, consciousness’s coming together, and consciousness’s cessation.’ This is the eighth cause and condition that gains knowledge before the religious life is attained and increases knowledge once it is attained.
+48\. “He trains diligently, desisting from unskillful conduct and increasing daily his skillful conduct. He exerts himself to be worthy and doesn’t abandon this teaching. This is the sixth cause and condition …
 {:#p48}
 
-49\. “What are the eight things to be cultivated? It’s the noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right concentration.
+49\. “Also, he recognizes the law of arising and cessation with wisdom and heads for the noble’s end of suffering. This is the seventh cause and condition …
 {:#p49}
 
-50\. “What are the eight things to be recognized? They are eight worldly ways: profit and decline, criticism and compliments, praise and censure, and pain and pleasure.
+50\. “Also, he observes the arising and ceasing nature of the five acquired aggregates: ‘This is form, form’s coming together, and form’s cessation. This is feeling … perception … volition … consciousness, consciousness’s coming together, and consciousness’s cessation.’ This is the eighth cause and condition that gains knowledge before the religious life is attained and increases knowledge once it is attained.
 {:#p50}
 
-51\. “What are the eight things to be ceased? It’s the eightfold wrong [path]: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong concentration.
+51\. “What are the eight things to be cultivated? It’s the noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right concentration.
 {:#p51}
 
-52\. “What are the eight things to be realized? They are the eight liberations. Form observed as form is the first liberation. Observing form externally without an internal perception of form is the second liberation. The liberation of purity is the third liberation. Going beyond perception of forms, ceasing perceptions of anger, and abiding in the abode of empty space is the fourth liberation. Going beyond the abode of empty space and abiding in the abode of consciousness is the fifth liberation. Going beyond the abode of consciousness and abiding in the abode of nothingness is the sixth liberation. Going beyond the abode of nothingness and abiding the abode with and without perception is the seventh liberation. Going beyond the abode with and without perception and abiding in the cessation of perception and recognition is the eighth liberation.
+52\. “What are the eight things to be recognized? They are eight worldly ways: profit and decline, criticism and compliments, praise and censure, and pain and pleasure.
 {:#p52}
 
-53\. “There are also nine things to be achieved, nine things to be cultivated, nine things to be recognized, nine things to be ceased, and nine things to be realized.
+53\. “What are the eight things to be ceased? It’s the eightfold wrong [path]: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong concentration.
 {:#p53}
 
-54\. “What are the nine things to be achieved? They are the nine factors of purified cessation: 1) the precepts as a factor of purified cessation, 2) the mind as a factor of purified cessation, 3) views as a factor of purified cessation, 4) going beyond doubt as a factor of purified cessation, 5) discernment as a factor of purified cessation, 6) the path as a factor of purified cessation, 7) elimination as a factor of purified cessation, 8) being desireless as a factor of purified cessation, and 9) liberation as a factor of purified cessation.
+54\. “What are the eight things to be realized? They are the eight liberations. Form observed as form is the first liberation. Observing form externally without an internal perception of form is the second liberation. The liberation of purity is the third liberation. Going beyond perception of forms, ceasing perceptions of anger, and abiding in the abode of space is the fourth liberation. Going beyond the abode of space and abiding in the abode of consciousness is the fifth liberation. Going beyond the abode of consciousness and abiding in the abode of nothingness is the sixth liberation. Going beyond the abode of nothingness and abiding the abode with and without perception is the seventh liberation. Going beyond the abode with and without perception and abiding in the cessation of perception and recognition is the eighth liberation.
 {:#p54}
 
-55\. “What are the nine things to be cultivated? They are the nine sources of joy: 1) joy, 2) love, 3) delight, 4) pleasure, 5) concentration, 6) real knowledge, 7) indifference, 8) being without desire, and 9) liberation.
+55\. “There are also nine things to be achieved, nine things to be cultivated, nine things to be recognized, nine things to be ceased, and nine things to be realized.
 {:#p55}
 
-56\. “What are the nine things to be recognized? They are the nine abodes of sentient beings. Some sentient beings have diverse bodies and diverse perceptions. These gods and humans are the first abode of sentient beings. Some sentient beings have diverse bodies but the same perception. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of sentient beings. Some sentient beings have the same body but diverse perceptions. This Ābhāsvara Heaven is the third abode of sentient beings. Some sentient beings have the same body and the same perception. This Śubhakṛtsnā Heaven is the fourth abode of sentient beings. Lacking perception or anything to feel or recognize, the Asāṃjñika Heaven is the fifth abode of sentient beings. Again, some sentient beings dwell in the abode of empty space, which is the sixth abode of sentient beings. Again, some sentient beings dwell in the abode of consciousness, which is the seventh abode of sentient beings. Again, some sentient beings dwell in the abode of nothingness, which is the eighth abode of sentient beings. Again, some sentient beings dwell in the abode with and without perception, which is the ninth abode of sentient beings.
+56\. “What are the nine things to be achieved? They are the nine factors of purified cessation: the precepts as a factor of purified cessation, the mind as a factor of purified cessation, views as a factor of purified cessation, going beyond doubt as a factor of purified cessation, discernment as a factor of purified cessation, the path as a factor of purified cessation, elimination as a factor of purified cessation, being desireless as a factor of purified cessation, and liberation as a factor of purified cessation.
 {:#p56}
 
-57\. “What are the nine things to be ceased? They are nine sources of craving: Because of craving, there’s pursuit. Because of pursuit, there’s gain. Because of gain, there’s use. Because of use, there’s desire. Because of desire, there’s attachment. Because of attachment, there’s jealousy. Because of jealousy, there’s clinging. Because of clinging, there’s guarding.
+57\. “What are the nine things to be cultivated? They are the nine sources of joy: 1. joy, 2. love, 3. delight, 4. pleasure, 5. concentration, 6. real knowledge, 7. indifference, 8. being without desire, and 9. liberation.
 {:#p57}
 
-58\. “What are the nine things to be realized? They are the nine cessations. If one enters the first dhyāna, then the thorn of sound is ceased. If one enters the second dhyāna, then the thorn of perception and contemplation is ceased. If one enters the third dhyāna, then the thorn of joy is ceased. If one enters the fourth dhyāna, then the thorn of breathing in and out is ceased. If one enters the abode of empty space, then the thorn of perceived form is ceased. If one enters the abode of consciousness, then the thorn of perceived emptiness is ceased. If one enters the abode of nothingness, then the thorn of perceived consciousness is ceased. If one enters the abode with and without perception, then the thorn of perceived nothingness is ceased. If one enters the concentration of complete cessation, then the thorn of perception and feeling is ceased.
+58\. “What are the nine things to be recognized? They are the nine abodes of sentient beings. Some sentient beings have diverse bodies and diverse perceptions. These gods and humans are the first abode of sentient beings. Some sentient beings have diverse bodies but the same perception. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of sentient beings. Some sentient beings have the same body but diverse perceptions. This Ābhāsvara Heaven is the third abode of sentient beings. Some sentient beings have the same body and the same perception. This Śubhakṛtsnā Heaven is the fourth abode of sentient beings. Lacking perception or anything to feel or recognize, the Asāṃjñika Heaven is the fifth abode of sentient beings. Again, some sentient beings dwell in the abode of space, which is the sixth abode of sentient beings. Again, some sentient beings dwell in the abode of consciousness, which is the seventh abode of sentient beings. Again, some sentient beings dwell in the abode of nothingness, which is the eighth abode of sentient beings. Again, some sentient beings dwell in the abode with and without perception, which is the ninth abode of sentient beings.
 {:#p58}
 
-59\. “There are also ten things to be achieved, ten things to be cultivated, ten things to be recognized, ten things to be ceased, and ten things to be realized.
+59\. “What are the nine things to be ceased? They are nine sources of craving: Because of craving, there’s pursuit. Because of pursuit, there’s gain. Because of gain, there’s use. Because of use, there’s desire. Because of desire, there’s attachment. Because of attachment, there’s jealousy. Because of jealousy, there’s clinging. Because of clinging, there’s guarding.
 {:#p59}
 
-60\. “What are the ten things to be achieved? They are the ten kinds of salvation: 1) A monk is perfect regarding the 250 precepts and perfect in his manner. He feels great anxiety when he sees a small infraction. He fully learns the precepts, and he doesn’t have any inclination to corruption. 2) He makes good friends. 3) His language is proper, and he has a great deal of patience. 4) He enjoys pursuing the good teaching and disseminates it generously. 5) When religious practitioners undertake a task, he immediately goes to help them. He doesn’t regard it as wearisome, can deal with difficulties, and he also instructs others to do the same. 6) He’s well-versed and able to retain what he learns, never being forgetful. 7) He’s diligent in desisting from unskillful qualities and developing skillful qualities. 8) He constantly focuses on mindfulness of himself without any other ideas, recalling his previous good conduct as though it were right in front of his eyes. 9) His wisdom is accomplished as he observes the law of arising and cessation, and he stops the source of suffering with the noble discipline. 10) He’s happy focusing on contemplation in a quiet dwelling and isn’t agitated while he meditates.
+60\. “What are the nine things to be realized? They are the nine cessations. If one enters the first dhyāna, then the thorn of sound is ceased. If one enters the second dhyāna, then the thorn of perception and contemplation is ceased. If one enters the third dhyāna, then the thorn of joy is ceased. If one enters the fourth dhyāna, then the thorn of breathing in and out is ceased. If one enters the abode of space, then the thorn of perceived form is ceased. If one enters the abode of consciousness, then the thorn of perceived emptiness is ceased. If one enters the abode of nothingness, then the thorn of perceived consciousness is ceased. If one enters the abode with and without perception, then the thorn of perceived nothingness is ceased. If one enters the concentration of complete cessation, then the thorn of perception and feeling is ceased.
 {:#p60}
 
-61\. “What are the ten things to be cultivated? They are the ten right practices: right view, right intent, right speech, right action, right livelihood, right method, right concentration, right liberation, and right knowledge.
+61\. “There are also ten things to be achieved, ten things to be cultivated, ten things to be recognized, ten things to be ceased, and ten things to be realized.
 {:#p61}
 
-62\. “What are the ten things to be recognized? They are the ten physical senses: the eye sense, ear sense, nose sense, tongue sense, body sense, sight sense, sound sense, odor sense, flavor sense, and touch sense.
+62\. “What are the ten things to be achieved? They are the ten kinds of salvation: 1. A monk is perfect regarding the 250 precepts and perfect in his manner. He feels great anxiety when he sees a small infraction. He fully learns the precepts, and he doesn’t have any inclination to corruption. 2. He makes good friends. 3. His language is proper, and he has a great deal of patience. 4. He enjoys pursuing the good teaching and disseminates it generously. 5. When religious practitioners undertake a task, he immediately goes to help them. He doesn’t regard it as wearisome, can deal with difficulties, and he also instructs others to do the same. 6. He’s well-versed and able to retain what he learns, never being forgetful. 7. He’s diligent in desisting from unskillful qualities and developing skillful qualities. 8. He constantly focuses on mindfulness of himself without any other ideas, recalling his previous good conduct as though it were right in front of his eyes. 9. His wisdom is accomplished as he observes the law of arising and cessation, and he stops the source of suffering with the noble discipline. 10. He’s happy focusing on contemplation in a quiet dwelling and isn’t agitated while he meditates.
 {:#p62}
 
-63\. “What are the ten things to be ceased? They are the ten wrong practices: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong concentration, wrong liberation, and wrong knowledge.
+63\. “What are the ten things to be cultivated? They are the ten right practices: right view, right intent, right speech, right action, right livelihood, right method, right concentration, right liberation, and right knowledge.
 {:#p63}
 
-64\. “What are the ten things to be realized? They are the ten teachings of those who’ve finished learning: their right view, right intent, right speech, right action, right livelihood, right method, right concentration, right liberation, and right knowledge.
+64\. “What are the ten things to be recognized? They are the ten physical senses: the eye sense, ear sense, nose sense, tongue sense, body sense, sight sense, sound sense, odor sense, flavor sense, and touch sense.
 {:#p64}
 
-65\. “Monks, this is called the teaching that increases one by one. Now, I’ve thus explained that teaching for you. I’m the Tathāgata; I’ve provided all that I should for you. Having compassionately and courteously instructed you, you ought to endeavor to put it into practice.
+65\. “What are the ten things to be ceased? They are the ten wrong practices: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong concentration, wrong liberation, and wrong knowledge.
 {:#p65}
 
-66\. “Monks, you should go to a quiet place under a tree or in an empty dwelling and diligently sit in meditation. Don’t be self-indulgent. What profit is there in not exerting yourself today and regretting it later? This is my teaching; be diligent in accepting and maintaining it.”
+66\. “What are the ten things to be realized? They are the ten teachings of those who’ve finished learning: their right view, right intent, right speech, right action, right livelihood, right method, right concentration, right liberation, and right knowledge.
 {:#p66}
 
-67\. When the monks heard what the Buddha taught, they rejoiced and approved.
+67\. “Monks, this is called the teaching that increases one by one. Now, I’ve thus explained that teaching for you. I’m the Tathāgata; I’ve provided all that I should for you. Having compassionately and courteously instructed you, you ought to endeavor to put it into practice.
 {:#p67}
+
+68\. “Monks, you should go to a quiet place under a tree or in an empty dwelling and diligently sit in meditation. Don’t be self-indulgent. What profit is there in not exerting yourself today and regretting it later? This is my teaching; be diligent in accepting and maintaining it.”
+{:#p68}
+
+69\. When the monks heard what the Buddha taught, they rejoiced and approved.
+{:#p69}
 
 ### Notes
 
