--- a/01_agama/dirgha/DA_17.md
+++ b/01_agama/dirgha/DA_17.md
@@ -335,7 +335,7 @@ next: DA_18.html
 98\. “A monk observes internal body as body. He’s diligent and not negligent. His attention to it isn’t lost, and he removes worldly craving and sorrow. He observes external body as body. He’s diligent and not negligent. His attention to it isn’t lost, and he removes worldly craving and sorrow. He observes internal and external body as body. He’s diligent and not negligent. His attention to it isn’t lost, and he removes worldly craving and sorrow. He observes feeling, mind, and principles in the same way. This is ceasing the myriad evil things by cultivating the four abodes of mindfulness in three ways.
 {:#p98}
 
-99\. “There are eight liberations. What are the eight? He observes form as form. This is the first liberation. He observes external form without an internal perception of form. This is the second liberation. He’s liberated by purity. This is the third liberation. He traverses perception of form, ceases perception of resistance, and abides in the abode of emptiness. This is the fourth liberation. He discards the abode of emptiness and abides in the abode of consciousness. This is the fifth liberation. He discards the abode of consciousness and abides in the abode of nothingness. This is the sixth liberation. He discards the abode of nothingness and abides in the abode of perception and no perception. This is the seventh liberation. The samādhi of complete cessation is the eighth liberation.”
+99\. “There are eight liberations. What are the eight? He observes form as form. This is the first liberation. He observes external form without an internal perception of form. This is the second liberation. He’s liberated by purity. This is the third liberation. He traverses perception of form, ceases perception of resistance, and abides in the abode of space. This is the fourth liberation. He discards the abode of space and abides in the abode of consciousness. This is the fifth liberation. He discards the abode of consciousness and abides in the abode of nothingness. This is the sixth liberation. He discards the abode of nothingness and abides in the abode of perception and no perception. This is the seventh liberation. The samādhi of complete cessation is the eighth liberation.”
 {:#p99}
 
 100\. Ānanda was at the time standing behind the Bhagavān holding a fan. He adjusted his robes to bare his right shoulder and knelt on his right knee. With his palms together, he said to the Buddha, “Amazing, Bhagavān! This teaching is pure, sublime, and supreme! What shall be its name? How shall we uphold it?”
@@ -365,7 +365,7 @@ next: DA_18.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 October 2021
+Last Revised: 7 February 2022
 {: .revised}
 
 ---
