--- a/01_agama/dirgha/DA_21.md
+++ b/01_agama/dirgha/DA_21.md
@@ -432,7 +432,7 @@ next: DA_22.html
 132\. “Some ascetics and priests say this: ‘I won’t be annihilated here; my body will be conjured in the form realm with faculties that are perfect, and it’ll be annihilated without remainder. This is “annihilation.”’
 {:#p132}
 
-133\. “Some say, ‘I won’t be annihilated here; I’ll be annihilated in the formless abode of emptiness.’
+133\. “Some say, ‘I won’t be annihilated here; I’ll be annihilated in the formless abode of space.’
 {:#p133}
 
 134\. “Some say, ‘I won’t be annihilated here; I’ll be annihilated in the formless abode of consciousness.’
@@ -526,7 +526,7 @@ next: DA_22.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 1 February 2021
+Last Revised: 7 February 2022
 {: .revised}
 
 ---
