--- a/01_agama/dirgha/DA_28.md
+++ b/01_agama/dirgha/DA_28.md
@@ -69,16 +69,16 @@ next: DA_29.html
 20\. “Wanderer, their perception of the third dhyāna ceases, and the perception of the fourth dhyāna arises. We know as a result of this that there’s cause and condition for perceptions to cease and cause and condition for perceptions to arise.
 {: #p20}
 
-21\. “They abandon all perceptions of form, cease resentment, don’t give attention to other perceptions, and enter the abode of emptiness.
+21\. “They abandon all perceptions of form, cease anger, don’t give attention to other perceptions, and enter the abode of space.
 {: #p21}
 
-22\. “Wanderer, all their perceptions of form cease, and the perception of the abode of emptiness arises. We know as a result of this that there’s cause and condition for perceptions to cease and cause and condition for perceptions to arise.
+22\. “Wanderer, all their perceptions of form cease, and the perception of the abode of space arises. We know as a result of this that there’s cause and condition for perceptions to cease and cause and condition for perceptions to arise.
 {: #p22}
 
-23\. “They go entirely beyond the abode of emptiness and enter the abode of consciousness.
+23\. “They go entirely beyond the abode of space and enter the abode of consciousness.
 {: #p23}
 
-24\. “Wanderer, their perception of the abode of emptiness ceases, and the perception of the abode of consciousness arises. We know as a result of this that there’s cause and condition for perceptions to cease and cause and condition for perceptions to arise.
+24\. “Wanderer, their perception of the abode of space ceases, and the perception of the abode of consciousness arises. We know as a result of this that there’s cause and condition for perceptions to cease and cause and condition for perceptions to arise.
 {: #p24}
 
 25\. “They go entirely beyond the abode of consciousness and enter the abode of nothingness.
@@ -159,9 +159,9 @@ The wanderer said, “Then I don’t say that that person is the self. I myself 
 
 46\. The Buddha said, “Setting aside the gods of the form realm as the self, it’s just the perception of a person that arises, and the perception of a person that ceases.”
 
-The wanderer said, “Then I don’t say that that person is the self. I myself say that the gods of abode of emptiness … abode of consciousness … abode of nothingness … abode with and without perception of the formless realm are the self.”
+The wanderer said, “Then I don’t say that that person is the self. I myself say that the gods of abode of space … abode of consciousness … abode of nothingness … abode with and without perception of the formless realm are the self.”
 
-47\. The Buddha said, “Setting aside the gods of the abode of emptiness … abode of consciousness … abode of nothingness … abode with and without perception of the formless realm as the self, it’s just the perception of a person that arises and the perception of a person that ceases.”
+47\. The Buddha said, “Setting aside the gods of the abode of space … abode of consciousness … abode of nothingness … abode with and without perception of the formless realm as the self, it’s just the perception of a person that arises and the perception of a person that ceases.”
 {: #p47}
 
 The wanderer said to the Buddha, “How is it, Gautama? How can I recognize that it’s the perception of a person that arises and the perception of a person that ceases?”
@@ -316,25 +316,25 @@ The wanderer answered, “Yes, it’s based on a deception.”
 85\. “You might think that defilement cannot cease, that purity cannot arise, and that suffering is eternal, but don’t think that. Why is that? The cessation of defilement is possible, and the production of purity is possible. Dwelling in a place of well-being is joyful and delightful. By focusing attention and unifying one’s mind, wisdom increases and broadens.
 {: #p85}
 
-86\. “Wanderer, I say that the gods of the desire realm … form realm … abode of emptiness … abode of consciousness … abode of nothingness … the abode with and without perception are defiled. I also say they are pure, and they attain freedom.
+86\. “Wanderer, I say that the gods of the desire realm … form realm … abode of space … abode of consciousness … abode of nothingness … the abode with and without perception are defiled. I also say they are pure, and they attain freedom.
 {: #p86}
 
 87\. “You might think that defilement cannot cease, that purity cannot arise, and that suffering is eternal, but don’t think that. Why is that? The cessation of defilement is possible, and the production of purity is possible. Dwelling in a place of well-being is joyful and delightful. By focusing attention and unifying one’s mind, wisdom increases and broadens.
 {: #p87}
 
-88\. Hastikaśīrṣa Śāriputra then said, “Bhagavān, shouldn’t it be that when there’s the desire realm person’s body of four elements and faculties, there’s also at the same time the body of the desire realm gods … form realm gods … abode of emptiness … abode of consciousness … abode of nothingness … the abode with and without perception gods?
+88\. Hastikaśīrṣa Śāriputra then said, “Bhagavān, shouldn’t it be that when there’s the desire realm person’s body of four elements and faculties, there’s also at the same time the body of the desire realm gods … form realm gods … abode of space … abode of consciousness … abode of nothingness … the abode with and without perception gods?
 {: #p88}
 
-89\. “Bhagavān, shouldn’t it be that when there’s the body of the desire realm gods, there’s also at the same time the desire realm person’s body of four elements and faculties, body of the form realm gods, body of the abode of emptiness … abode of consciousness … abode of nothingness … abode with and without perception gods?
+89\. “Bhagavān, shouldn’t it be that when there’s the body of the desire realm gods, there’s also at the same time the desire realm person’s body of four elements and faculties, body of the form realm gods, body of the abode of space … abode of consciousness … abode of nothingness … abode with and without perception gods?
 {: #p89}
 
-90\. “Bhagavān, shouldn’t it be that when there’s the body of the form realm gods, there’s also at the same time the desire realm person’s body of four elements and faculties, the body of the desire realm gods, body of the abode of emptiness … abode of consciousness … abode of nothingness … abode with and without perception gods?
+90\. “Bhagavān, shouldn’t it be that when there’s the body of the form realm gods, there’s also at the same time the desire realm person’s body of four elements and faculties, the body of the desire realm gods, body of the abode of space … abode of consciousness … abode of nothingness … abode with and without perception gods?
 {: #p90}
 
-91\. “… when there’s the body of the gods of the abode with and without perception, there’s also at the same time the desire realm person’s body of four elements and faculties, body of the desire realm gods, body of the form realm gods … abode of emptiness … abode of consciousness … abode of nothingness … abode with and without perception?”
+91\. “… when there’s the body of the gods of the abode with and without perception, there’s also at the same time the desire realm person’s body of four elements and faculties, body of the desire realm gods, body of the form realm gods … abode of space … abode of consciousness … abode of nothingness … abode with and without perception?”
 {: #p91}
 
-92\. The Buddha told Hastikaśīrṣa Śāriputra, “If there’s a person’s body of the desire realm of four elements and faculties, then it would correct that there’s a person’s body of the desire realm of four elements and faculties but not the god body of the desire realm … form realm … abode of emptiness … abode of consciousness … abode of nothingness … abode with and without perception… when there’s a god body of the abode with and without perception, then it would be correct that there’s a god body of the abode with and without perception but no human body of four elements and faculties of the desire realm or a god body of the desire realm, god body of the form realm … abode of emptiness … abode of consciousness … the abode of nothingness.
+92\. The Buddha told Hastikaśīrṣa Śāriputra, “If there’s a person’s body of the desire realm of four elements and faculties, then it would correct that there’s a person’s body of the desire realm of four elements and faculties but not the god body of the desire realm … form realm … abode of space … abode of consciousness … abode of nothingness … abode with and without perception… when there’s a god body of the abode with and without perception, then it would be correct that there’s a god body of the abode with and without perception but no human body of four elements and faculties of the desire realm or a god body of the desire realm, god body of the form realm … abode of space … abode of consciousness … the abode of nothingness.
 {: #p92}
 
 93\. “Hastikaśīrṣa, it’s like cow’s milk. Milk changes into cream, cream gives rise to raw butter, raw butter becomes refined butter, refined butter becomes ghee, and ghee is supreme. Hastikaśīrṣa, it should be that when there’s milk, it’s only called milk and not called cream, butter, and ghee. Thus, when it turns into ghee, it’s only called ghee and not called milk, cream, and butter.
@@ -391,7 +391,7 @@ The Buddha told the wanderer, “If someone of a different training wants to lea
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 10 August 2021
+Last Revised: 7 February 2022
 {: .revised}
 
 ---
